noinst_LIBRARIES = libncwidgets.a

libncwidgets_a_SOURCES = \
		colors.h keys.h utils.h ncwidgets.h \
		ncwidget.c \
		nccalendar.c \
		ncentry.c \
		nclabel.c \
		ncbutton.c \
		nclist.c \
		ncfselect.c \
		ncselect.c \
		ncinit.c \
		ncgroup.c \
		dialog.c \
		ncwin.c

libncwidgets_a_CFLAGS = @CURSES_CFLAGS@
